# chatgpt

./: README.md  mkdocs.yml  pyproject.toml
chatgpt/: main.py
