[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatgpt"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "moskomule", email = "moskomule@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich",
    "openai",
    "streamlit",
    "ipython",
    "watchdog"
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[tool.hatch.envs.default.scripts]
app = "python -m streamlit run chatgpt/main.py"

[project.urls]
Documentation = "https://moskomule.github.io/chatgpt"
Issues = "https://github.com/moskomule/chatgpt/issues"
Source = "https://github.com/moskomule/chatgpt"

[tool.hatch.version]
path = "chatgpt/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]